# pyriodic-table

./: LICENSE  README.md  element.py  pyproject.toml
.github/workflows/: codeql-analysis.yml
examples/: 18th_century_elements.py  alkali_metals_to_csv.py  densest_element.py  lowest_melting_point.py  mean_atomic_mass.py  one_letter_symbols.py  prime_atomic_numbers.py  random_element.py  sort_by_boiling_point.py
periodic_table/: chemelements.py  exceptions.py  periodictable.py
pyriodic_table/: chemelements.py  data.py  exceptions.py  periodictable.py
src/: chemelements.py  element.py  elements.py  exceptions.py  periodictable.py
tests/: test_chemelements.py  test_periodictable.py
